--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
-
+.bq{
+    max-width: 600px;
+    margin: 10px;
+    padding: 15px;
+    border-left: 8px solid green;
+    background-color: #f8ffef;
+    font-weight: bold;
+}
 /* Your CSS Code here. */
