--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 10px;
     padding: 15px;
     border-left: 8px solid green;
-    background-color: #f8ffef;
+    background-color: #f8fffe;
     font-weight: bold;
 }
 /* Your CSS Code here. */
